2005-06-10 Mikhail Khodjaiants
	Bug 83465: Add "Run to line" and "Resume at line" actions to the context menu of Disassembly view.
	* plugin.xml

2005-06-10 Mikhail Khodjaiants
	Bug 81353: automatically opening of the disassembly window.
	* ToggleInstructionStepModeActionDelegate.java
	* ICDebugUIConstants.java

2005-06-10 Mikhail Khodjaiants
	Warning cleanup.
	* AddExpressionEditorActionDelegate.java
	* ExpressionDialog.java
	* ManageFunctionBreakpointActionDelegate.java
	* ResumeAtLineActionDelegate.java
	* RetargetAction.java
	* RunToLineAdapter.java
	* ToggleBreakpointRulerAction.java
	* ToggleWatchpointActionDelegate.java
	* ThreadFilterEditor.java
	* DisassemblyAnnotationModel.java
	* DisassemblyView.java

2005-06-09 Mikhail Khodjaiants
	Warning cleanup.
	* CDebugModelPresentation.java

2005-06-09 Mikhail Khodjaiants
	Warning cleanup.
	* CBreakpointUpdater.java

2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Externalized strings for the "Restore Default Register Groups" action.
	* RestoreDefaultRegisterGroupsActionDelegate.java
	* ActionMessages.properties

2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support for the "Restore Default Register Groups" action.
	+ RestoreDefaultRegisterGroupsActionDelegate.java
	* plugin.properties
	* plugin.xml

2005-06-07 Mikhail Khodjaiants
	New images for mapping source containers.
	* icons/obj16/mapentry_obj.gif
	* icons/obj16/mapping_obj.gif
	+ icons/wizban/mapentry_obj.gif
	+ icons/wizban/mapping_obj.gif
	* CDebugImages.java
	* PathMappingDialog.java

2005-06-07 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support fo the "Edit Register Group" action.
	* AbstractViewActionDelegate.java
	* ActionMessages.properties
	* AddRegisterGroupActionDelegate.java
	+ EditRegisterGroupActionDelegate.java
	* plugin.properties
	* plugin.xml

2005-05-31 Mikhail Khodjaiants
	Bug 84816: The modification of the signal properties should be done in the background.